test: 부족한 테스트 내용 추가 및 정리