@@ -113,7 +113,102 @@ class ReservationTimeRepositoryTest {
 
         // then
         assertThat(result.size()).isEqualTo(1);
-        assertThat(result.getFirst().getId().value()).isEqualTo(timeId1);
+        assertThat(result.get(0).getId().value()).isEqualTo(timeId1);
+    }
+
+    @Test
+    void 예약된_시간이_없을_때_빈_리스트를_반환한다() {
+        // given
+        String timeId1 = generateId();
+        String timeId2 = generateId();
+        String themeId = generateId();
+        String userId = generateId();
+
+        testUtil.insertReservationTime(timeId1, LocalTime.of(10, 0));
+        testUtil.insertReservationTime(timeId2, LocalTime.of(12, 0));
+        testUtil.insertTheme(themeId, "주홍색 연구");
+        testUtil.insertUser(userId, "돔푸");
+
+        // when
+        final List<ReservationTime> result = sut.findNotAvailableByDateAndThemeId(LocalDate.now().plusDays(10), Id.create(themeId));
+
+        // then
+        assertThat(result).isEmpty();
+    }
+
+    @Test
+    void 다른_날짜의_예약은_포함하지_않는다() {
+        // given
+        String timeId1 = generateId();
+        String timeId2 = generateId();
+        String themeId = generateId();
+        String userId = generateId();
+        String reservationId = generateId();
+
+        testUtil.insertReservationTime(timeId1, LocalTime.of(10, 0));
+        testUtil.insertReservationTime(timeId2, LocalTime.of(12, 0));
+        testUtil.insertTheme(themeId, "주홍색 연구");
+        testUtil.insertUser(userId, "돔푸");
+        testUtil.insertReservation(reservationId, LocalDate.now().plusDays(5), timeId1, themeId, userId);
+
+        // when
+        final List<ReservationTime> result = sut.findNotAvailableByDateAndThemeId(LocalDate.now().plusDays(10), Id.create(themeId));
+
+        // then
+        assertThat(result).isEmpty();
+    }
+
+    @Test
+    void 다른_테마의_예약은_포함하지_않는다() {
+        // given
+        String timeId1 = generateId();
+        String timeId2 = generateId();
+        String themeId1 = generateId();
+        String themeId2 = generateId();
+        String userId = generateId();
+        String reservationId = generateId();
+
+        testUtil.insertReservationTime(timeId1, LocalTime.of(10, 0));
+        testUtil.insertReservationTime(timeId2, LocalTime.of(12, 0));
+        testUtil.insertTheme(themeId1, "주홍색 연구");
+        testUtil.insertTheme(themeId2, "로맨스");
+        testUtil.insertUser(userId, "돔푸");
+        testUtil.insertReservation(reservationId, LocalDate.now().plusDays(10), timeId1, themeId1, userId);
+
+        // when
+        final List<ReservationTime> result = sut.findNotAvailableByDateAndThemeId(LocalDate.now().plusDays(10), Id.create(themeId2));
+
+        // then
+        assertThat(result).isEmpty();
+    }
+
+    @Test
+    void 여러_예약이_있을_때_모든_예약된_시간을_찾을_수_있다() {
+        // given
+        String timeId1 = generateId();
+        String timeId2 = generateId();
+        String timeId3 = generateId();
+        String timeId4 = generateId();
+        String themeId = generateId();
+        String userId = generateId();
+        String reservationId1 = generateId();
+        String reservationId2 = generateId();
+
+        testUtil.insertReservationTime(timeId1, LocalTime.of(10, 0));
+        testUtil.insertReservationTime(timeId2, LocalTime.of(12, 0));
+        testUtil.insertReservationTime(timeId3, LocalTime.of(14, 0));
+        testUtil.insertReservationTime(timeId4, LocalTime.of(16, 0));
+        testUtil.insertTheme(themeId, "주홍색 연구");
+        testUtil.insertUser(userId, "돔푸");
+        testUtil.insertReservation(reservationId1, LocalDate.now().plusDays(10), timeId1, themeId, userId);
+        testUtil.insertReservation(reservationId2, LocalDate.now().plusDays(10), timeId3, themeId, userId);
+
+        // when
+        final List<ReservationTime> result = sut.findNotAvailableByDateAndThemeId(LocalDate.now().plusDays(10), Id.create(themeId));
+
+        // then
+        assertThat(result).hasSize(2);
+        assertThat(result).extracting(r -> r.getId().value()).containsExactlyInAnyOrder(timeId1, timeId3);
     }
 
     @Test
